# LLM_RAG

./: .gitignore  Makefile  README.md  cookiecutter.json  env.example  pyproject.toml
src/config/: default_config.yaml
src/interfaces/api/: main.py
src/interfaces/cli/: main.py
src/rag_pipeline/: generator.py  pipeline.py  retriever.py
tests/: test_pipeline.py
