[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
{% if cookiecutter.llm_model == "mistralai/Mistral-7B-Instruct-v0.1" %}
transformers = "^4.36.0"
torch = "^2.1.0"
{% endif %}
{% if cookiecutter.llm_model in ["gpt-3.5-turbo", "gpt-4"] %}
openai = "^1.3.0"
{% endif %}
{% if cookiecutter.include_fastapi == "yes" %}
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
{% endif %}
{% if cookiecutter.include_cli == "yes" %}
click = "^8.1.7"
{% endif %}
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 