[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"

[tool.poetry.dependencies.transformers]
version = "^4.36.0"
optional = true

[tool.poetry.dependencies.torch]
version = "^2.1.0"
optional = true

[tool.poetry.dependencies.openai]
version = "^1.3.0"
optional = true

[tool.poetry.dependencies.fastapi]
version = "^0.104.0"
optional = true

[tool.poetry.dependencies.uvicorn]
version = "^0.24.0"
optional = true

[tool.poetry.dependencies.click]
version = "^8.1.7"
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 